<resources>
    <string name="app_name">Nafj</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="submitNumberText">Please submit your mobile no. to continue</string>
    <string name="login_register">Login/Register</string>
    <string name="_0000000000">0000000000</string>
    <string name="_91">+91</string>
    <string name="next">next</string>
    <string name="submitOtpText">"Please enter the OTP sent via SMS on "</string>
    <string name="otp">OTP</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="incorrect_otp_entered">Incorrect OTP entered..</string>
    <string name="category_listing">Category Listing</string>
    <string name="product_listing">Product image</string>
    <string name="viewproductimage">viewProductImage</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_item">Remove Item</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_to_remove_this_item">Are you sure to remove this item?</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="final_amount">Final amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="submit">Submit</string>
    <string name="_1">1</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="place_order">Place Order</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="cartbutton">cartButton</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
</resources>