<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/action_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/notifications"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/action_cart"
        android:title="@string/cart"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="always"
        />

</menu>