<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginOtpActivity">

        <include
            android:id="@+id/appIconName"
            layout="@layout/app_icon_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submitOtpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textHeaderMargin"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/barlow_medium"
            android:padding="@dimen/textSubHeaderPadding"
            android:text="@string/submitOtpText"
            android:textColor="@color/grey"
            android:textSize="@dimen/textSubHeaderSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appIconName" />

        <TextView
            android:id="@+id/otpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textLightHeaderMargin"
            android:layout_marginTop="@dimen/textLightHeaderMargin"
            android:padding="@dimen/textSubHeaderPadding"
            android:text="@string/otp"
            android:textSize="@dimen/textLightHeaderSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitOtpText" />

        <LinearLayout
            android:id="@+id/root_otp_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTextView">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box1"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_marginEnd="@dimen/textSubHeaderMargin"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box2"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_marginEnd="@dimen/textSubHeaderMargin"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box3"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_marginEnd="@dimen/textSubHeaderMargin"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box4"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_marginEnd="@dimen/textSubHeaderMargin"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box5"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_marginEnd="@dimen/textSubHeaderMargin"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_edit_box6"
                android:layout_width="@dimen/editTextHeightView"
                android:layout_height="@dimen/editTextHeightView"
                android:layout_weight="1"
                android:background="@drawable/otp_with_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/textOtpSize" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_otp_entered"
            android:fontFamily="@font/barlow_regular"
            android:textColor="@color/red"
            android:textSize="@dimen/textLightHeaderSize"
            android:visibility="gone"
            android:padding="@dimen/textLightHeaderPadding"
            app:layout_constraintStart_toStartOf="@+id/root_otp_layout"
            app:layout_constraintEnd_toEndOf="@+id/root_otp_layout"
            app:layout_constraintTop_toBottomOf="@+id/root_otp_layout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textHeaderMargin"
            android:backgroundTint="@color/brown"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorOtp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resendOtpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textHeaderMargin"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/barlow_medium"
            android:padding="@dimen/textSubHeaderPadding"
            android:text="@string/did_not_receive_the_otp"
            android:textColor="@color/grey"
            android:textSize="@dimen/textSubHeaderSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resendOtpButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/brown"
            android:text="@string/resend_otp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/resendOtpText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>