<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.LoginActivity">

            <include
                android:id="@+id/appIconName"
                layout="@layout/app_icon_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/submitNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textHeaderMargin"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/barlow_medium"
                android:padding="@dimen/textSubHeaderPadding"
                android:text="@string/login_register"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSubHeaderSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appIconName" />

            <androidx.cardview.widget.CardView
                android:id="@+id/usernameLoginTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:outlineAmbientShadowColor="#142c2738"
                app:cardCornerRadius="6dp"
                app:cardElevation="@dimen/shadow_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitNumberText">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLoginTIL1"
                    style="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/mobile_no"
                        android:background="@drawable/white_box"
                        android:fontFamily="@font/barlow_regular"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:minLines="1"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emptyUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/barlow_regular"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/usernameLoginTIL"
                app:layout_constraintStart_toStartOf="@+id/usernameLoginTIL"
                app:layout_constraintTop_toBottomOf="@+id/usernameLoginTIL" />


            <androidx.cardview.widget.CardView
                android:id="@+id/passwordLoginTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:outlineAmbientShadowColor="#142c2738"
                app:cardCornerRadius="6dp"
                app:cardElevation="@dimen/shadow_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emptyUsername">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLoginTIL1"
                    style="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emptyUsername">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/password"
                        android:background="@drawable/white_box"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ_?!@#$%^*()1234567890"
                        android:fontFamily="@font/barlow_regular"
                        android:inputType="textPassword"
                        android:maxLength="35"
                        android:maxLines="1"
                        android:minLines="1"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emptyPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/barlow_regular"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/passwordLoginTIL"
                app:layout_constraintStart_toStartOf="@+id/passwordLoginTIL"
                app:layout_constraintTop_toBottomOf="@+id/passwordLoginTIL" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textHeaderMargin"
                android:backgroundTint="@color/brown"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emptyPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>