<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/white_box_without_border"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/removeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/remove_item"
            android:padding="@dimen/textHeaderPadding"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cartItemImage"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/viewproductimage"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/imageBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="cartItemImage" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/removeItem"
            app:layout_constraintStart_toEndOf="@+id/imageBarrier"
            app:layout_constraintTop_toTopOf="@+id/cartItemImage" />

        <TextView
            android:id="@+id/categoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageBarrier"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/subtractQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textHeaderMargin"
            android:background="@color/grey"
            android:src="@drawable/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalQuantityText"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/imageBarrier"
            app:layout_constraintTop_toBottomOf="@+id/categoryName"
            app:shapeAppearanceOverlay="@style/calculation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalQuantityText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/barlow_regular"
            android:gravity="center"
            android:padding="@dimen/textHeaderPadding"
            android:text="@string/_1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addQuantity"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/subtractQuantity"
            app:layout_constraintTop_toBottomOf="@+id/categoryName" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/addQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalQuantityValue"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/totalQuantityText"
            app:layout_constraintTop_toBottomOf="@+id/categoryName"
            app:shapeAppearanceOverlay="@style/calculation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalQuantityValue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/barlow_regular"
            android:gravity="center_vertical|end"
            android:padding="@dimen/textHeaderPadding"
            android:text="@string/viewproductimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintStart_toEndOf="@+id/addQuantity"
            app:layout_constraintTop_toBottomOf="@+id/categoryName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>